--- a/client_config.json
+++ b/client_config.json
@@ -1,8 +1,8 @@
 {
     "client_config": 
     {
-        "version_code": 90,
-        "url_launcher": "https://www.dropbox.com/scl/fi/wc9pxyw1mm3mcvinzfmlc/LAST-LUNCHER_4.7.1.2.apk?rlkey=p0l5cry2u5amwfoxcbyepp4b0&st=q14agmr6&dl=1",
+        "version_code": 91,
+        "url_launcher": "https://www.dropbox.com/scl/fi/hsqkeo1u6coyk0n7qy79d/base.apk?rlkey=hwg6s7xrghs3e8adtbkjamrys&st=i2thd6ge&dl=1",
         "url_cache_files": "https://sampmobile.com/oyundosya/files.json"
     }
 }
