--- a/client_config.json
+++ b/client_config.json
@@ -2,7 +2,7 @@
     "client_config": 
     {
         "version_code": 91,
-        "url_launcher": "https://www.dropbox.com/scl/fi/hsqkeo1u6coyk0n7qy79d/base.apk?rlkey=hwg6s7xrghs3e8adtbkjamrys&st=i2thd6ge&dl=1",
+        "url_launcher": "https://www.dropbox.com/scl/fi/c7oml43426vbbnjov60jf/LAST-LUNCHER_LAST-Team.apk?rlkey=ctdilyr3jii4rl1oiufl259wq&st=58xvopaz&dl=1",
         "url_cache_files": "https://sampmobile.com/oyundosya/files.json"
     }
 }
