--- a/client_config.json
+++ b/client_config.json
@@ -3,6 +3,6 @@
     {
         "version_code": 91,
         "url_launcher": "https://www.dropbox.com/scl/fi/c7oml43426vbbnjov60jf/LAST-LUNCHER_LAST-Team.apk?rlkey=ctdilyr3jii4rl1oiufl259wq&st=58xvopaz&dl=1",
-        "url_cache_files": "https://raw.githubusercontent.com/dev-djangotop1/LAUNCHER-2-OWNERS/main/files.json"
+        "url_cache_files": "https://content.unisamp-mobile.com/jmobile_cache/mobile/cache/lite_list.json"
     }
 }
