--- a/client_config.json
+++ b/client_config.json
@@ -3,6 +3,6 @@
     {
         "version_code": 91,
         "url_launcher": "https://www.dropbox.com/scl/fi/c7oml43426vbbnjov60jf/LAST-LUNCHER_LAST-Team.apk?rlkey=ctdilyr3jii4rl1oiufl259wq&st=58xvopaz&dl=1",
-        "url_cache_files": "https://alynsampmobile.pro/api/game-files-list?type=full"
+        "url_cache_files": "https://apibeta.thunder-samp.com/data.json"
     }
 }
